// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CareerFilter renders component 1`] = `
<div
  className="container"
>
  <form
    onSubmit={[Function]}
  >
    <ul>
      <li
        className="search"
      >
        <label
          className="label"
          htmlFor="traitify-career-search"
        >
          search
        </label>
        <input
          className="field"
          id="traitify-career-search"
          name="search"
          onChange={[Function]}
          placeholder="search"
          type="text"
          value=""
        />
      </li>
      <li>
        <div
          className="fieldGroup"
        >
          <button
            onClick={[Function]}
            type="button"
          >
            filter
          </button>
          <ul
            className="formGroup "
          >
            <div>
              <li
                className="groupTitle"
              >
                sort
              </li>
              <li>
                <label
                  htmlFor="traitify-career-sort-match"
                >
                  <input
                    aria-labelledby="traitify-career-sort-match-label"
                    checked={true}
                    className="check"
                    id="traitify-career-sort-match"
                    name="sort"
                    onChange={[Function]}
                    type="radio"
                    value="match"
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square-check
                  </div>
                  <span
                    id="traitify-career-sort-match-label"
                  >
                    best_match
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-sort-title"
                >
                  <input
                    aria-labelledby="traitify-career-sort-title-label"
                    checked={false}
                    className="check"
                    id="traitify-career-sort-title"
                    name="sort"
                    onChange={[Function]}
                    type="radio"
                    value="title"
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square
                  </div>
                  <span
                    id="traitify-career-sort-title-label"
                  >
                    title
                  </span>
                </label>
              </li>
            </div>
            <div>
              <li
                className="groupTitle"
              >
                education_level
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-1"
                >
                  <input
                    aria-labelledby="traitify-career-level-1-label"
                    checked={true}
                    className="check"
                    id="traitify-career-level-1"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={1}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square-check
                  </div>
                  <span
                    id="traitify-career-level-1-label"
                  >
                    experience_level_1
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-2"
                >
                  <input
                    aria-labelledby="traitify-career-level-2-label"
                    checked={true}
                    className="check"
                    id="traitify-career-level-2"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={2}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square-check
                  </div>
                  <span
                    id="traitify-career-level-2-label"
                  >
                    experience_level_2
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-3"
                >
                  <input
                    aria-labelledby="traitify-career-level-3-label"
                    checked={true}
                    className="check"
                    id="traitify-career-level-3"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={3}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square-check
                  </div>
                  <span
                    id="traitify-career-level-3-label"
                  >
                    experience_level_3
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-4"
                >
                  <input
                    aria-labelledby="traitify-career-level-4-label"
                    checked={true}
                    className="check"
                    id="traitify-career-level-4"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={4}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square-check
                  </div>
                  <span
                    id="traitify-career-level-4-label"
                  >
                    experience_level_4
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-5"
                >
                  <input
                    aria-labelledby="traitify-career-level-5-label"
                    checked={true}
                    className="check"
                    id="traitify-career-level-5"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={5}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square-check
                  </div>
                  <span
                    id="traitify-career-level-5-label"
                  >
                    experience_level_5
                  </span>
                </label>
              </li>
            </div>
            <div>
              <li
                className="center"
              >
                <input
                  type="submit"
                  value="search"
                />
              </li>
            </div>
          </ul>
        </div>
      </li>
      <div />
    </ul>
  </form>
</div>
`;

exports[`CareerFilter renders component with different icons and style 1`] = `
<div
  className="container"
>
  <form
    onSubmit={[Function]}
  >
    <ul>
      <li
        className="search"
      >
        <label
          className="label"
          htmlFor="traitify-career-search"
        >
          search
        </label>
        <input
          className="field"
          id="traitify-career-search"
          name="search"
          onChange={[Function]}
          placeholder="search"
          type="text"
          value=""
        />
      </li>
      <li>
        <div
          className="fieldGroup"
        >
          <button
            onClick={[Function]}
            type="button"
          >
            filter
          </button>
          <ul
            className="formGroup block"
          >
            <div>
              <li
                className="groupTitle"
              >
                sort
              </li>
              <li>
                <label
                  htmlFor="traitify-career-sort-match"
                >
                  <input
                    aria-labelledby="traitify-career-sort-match-label"
                    checked={false}
                    className="check"
                    id="traitify-career-sort-match"
                    name="sort"
                    onChange={[Function]}
                    type="radio"
                    value="match"
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square
                  </div>
                  <span
                    id="traitify-career-sort-match-label"
                  >
                    best_match
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-sort-title"
                >
                  <input
                    aria-labelledby="traitify-career-sort-title-label"
                    checked={true}
                    className="check"
                    id="traitify-career-sort-title"
                    name="sort"
                    onChange={[Function]}
                    type="radio"
                    value="title"
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square-check
                  </div>
                  <span
                    id="traitify-career-sort-title-label"
                  >
                    title
                  </span>
                </label>
              </li>
            </div>
            <div>
              <li
                className="groupTitle"
              >
                education_level
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-1"
                >
                  <input
                    aria-labelledby="traitify-career-level-1-label"
                    checked={true}
                    className="check"
                    id="traitify-career-level-1"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={1}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square-check
                  </div>
                  <span
                    id="traitify-career-level-1-label"
                  >
                    experience_level_1
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-2"
                >
                  <input
                    aria-labelledby="traitify-career-level-2-label"
                    checked={true}
                    className="check"
                    id="traitify-career-level-2"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={2}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square-check
                  </div>
                  <span
                    id="traitify-career-level-2-label"
                  >
                    experience_level_2
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-3"
                >
                  <input
                    aria-labelledby="traitify-career-level-3-label"
                    checked={true}
                    className="check"
                    id="traitify-career-level-3"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={3}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square-check
                  </div>
                  <span
                    id="traitify-career-level-3-label"
                  >
                    experience_level_3
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-4"
                >
                  <input
                    aria-labelledby="traitify-career-level-4-label"
                    checked={false}
                    className="check"
                    id="traitify-career-level-4"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={4}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square
                  </div>
                  <span
                    id="traitify-career-level-4-label"
                  >
                    experience_level_4
                  </span>
                </label>
              </li>
              <li>
                <label
                  htmlFor="traitify-career-level-5"
                >
                  <input
                    aria-labelledby="traitify-career-level-5-label"
                    checked={false}
                    className="check"
                    id="traitify-career-level-5"
                    name="experience_level"
                    onChange={[Function]}
                    type="checkbox"
                    value={5}
                  />
                  <div
                    className="mock"
                  >
                    Icon - 
                    square
                  </div>
                  <span
                    id="traitify-career-level-5-label"
                  >
                    experience_level_5
                  </span>
                </label>
              </li>
            </div>
            <div>
              <li
                className="center"
              >
                <input
                  type="submit"
                  value="search"
                />
              </li>
            </div>
          </ul>
        </div>
      </li>
      <div />
    </ul>
  </form>
</div>
`;

exports[`CareerFilter renders nothing if not ready 1`] = `null`;
